assets/css/main.css
:root {
    /* Palette Colors */
    --main-color: #634ece;
    --second-color: #fb6747;
    --third-color: #232333;
    --bg-2: #241a4d;
    --purple: #b15dab;
    --purple-bg: #faf0f8;
    --blue: #35759c;
    --blue-bg: #fafdff;
    --green: #479c06;
    --green-bg: #ecfae9;
    --red: #e27500;
    --red-bg: #fff1ec;
    --main-white: #FCFCFC;
    --black: #232333;
    --light-black: rgb(95, 95, 95);
    --header-black: rgb(60, 60, 60);
    --bg: #fbfbfb;

    /* Global Styles */
    --box-shadow: rgba(27, 27, 27, 0) 1px 3px 8px;
    --inner-left-align: .985em;
    /* Sizes */
    --base-font-size: 1.0em;
    --base-height-padding: 1.35em;
    /* Breakpoints */
    --bp-small: 48em;
    --bp-medium: 64em;
    --bp-large: 85.375;
    --bp-xlarge: 120em;
}

* {
    padding: 0;
    box-sizing: border-box;
    text-decoration: inherit;
}


/* HTML Tag Styles */
html, body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    max-width: 780px;
    /*provides maximum, in case screen is huge*/
    width: 80%;
    margin: 0 auto;
    font-size: var(--base-font-size);
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    font-weight: 400;
    text-align: left;
    color: var(--black);
    background-color: var(--bg);
}

main {
    margin-right: 20%;
    flex: 1;
}

p {
    line-height: 1.5;
}

b {
    font-weight: 500;
    color: var(--light-black);
}

strong {
    color: var(--black);
}

table tr td {
    text-align: left;
    padding-right: .75em;
}

img {
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 100%;
}

figcaption {
    color: gray;
    width: 100%;
    text-align: center;
    margin: 0 auto;
    padding-top: .5em;
}

blockquote {
    background-color: #F8F8F8;
    padding: .5em;
    border: 2px solid var(--main-color);
}

aside, .aside {
    display: inline;
    float: right;
    position: relative;
    width: 18vw;
    margin-right: -23vw;
    font-size: 14px;
    border-top: 1px solid rgb(224, 224, 224);
    padding-top: 4px;
}

hr {
    border: 0;
    clear: both;
    display: block;
    width: 100%;
    height: 1px;
    background-color: #EEEEEE;
}

.content {
    flex: 1 0 auto;
}

.bold {
    font-weight: 600;
}
/*------------*/


/* Colors */
.purple {
    color: var(--purple);
}

.green {
    color: var(--green);
}

.red {
    color: var(--red);
}

.main-color {
    color: var(--main-color);
}

.third-color {
    color: var(--third-color);
}
/*------------*/


/* List Styling */
ol {
    list-style-type: decimal;
}

ol li {
    list-style-type: disc;
}

i {
    color: var(--header-black);
}
/*------------*/


/* Header Styling */
h1 {
    font-size: 1.75em;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 1.25em;
    font-weight: 400;
}

h4 {
    font-size: var(--base-font-size);
    font-weight: 400;
}
/*------------*/


/* Nav Styling */
nav {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    padding: 0.25em 0em 0.75em 1.5em;
}

.navbar {
    padding: 0 0 0 1em;
    margin: 0 0 0 0;
}

.navbar-nav .navbar ul li {
    list-style-type: none;
}

.navbar-brand {
    font-weight: 500;
    font-size: 1.5em;
    padding-left: .75em;
    padding-bottom: 0em;
    margin-top: 1.25em;
    color: var(--third-color);
}

.about-nav {
    background-color: var(--red-bg);
    color: var(--red);
    padding: .2em;
}

.projects-nav{
    background-color: var(--purple-bg);
    color: var(--purple);
    padding: .2em;
}

.notes-nav {
    background-color: var(--green-bg);
    color: var(--green);
    padding: .2em;
}

.minor-nav {
    background-color: var(--blue-bg);
    color: var(--blue);
    padding: .2em;
}
/*------------*/


/* General Section Styling */
section {
    width: 100%;
    padding: var(--base-height-padding) .5em .75em .5em;
    border-top: 2.25px solid #f0f0f0;
}

.section-header {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    color: var(--header-black);
    padding-left: 2em;
}

.section-h2 {
    border: none;
}

.section-content {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 0 2em 0em 2em;
}
/*------------*/


/* Specific Section Styling */
#about {
    text-align: justify;
}
.social-media-list {
    list-style: none;
}

#notes {}
.note-content {
    padding-left: 2em;
    padding-right: 2em;
    max-width: 46em;
    margin: 0 auto;
}

#project {}
.project-type {
    color: var(--light-black);
}
.project-row {
    padding-left: var(--inner-left-align);
}
.project-item {
    padding-top: .5em;
    margin-right: .5em;
}
/*------------*/


/* Post Styling */
.post {
    height: 100%;
    padding-left: 2em;
    padding-right: 2em;
}

.post-title {
    grid-area: post-title;
    width: 100%;
    padding: 2.5em 0 0 0;
}

.post-header {
    grid-area: post-header;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
}

.post-date {
    color: var(--light-black);
    font: 14px;
}

.post-tags {
    text-align: left;
    padding-top: .75em;
    padding-bottom: .5em;
    width: 100%;
}

.post-intro {
    padding-top: 1em;
    padding-bottom: 1em;
}

.post-content {
    grid-area: post-content;
    border-top: 2px solid #f2f2f6;
    text-align: justify;
    text-justify: inter-word;
    word-wrap: break-word;
    padding-top: 1em;
}

.post-h2 {
    color: var(--third-color);
}
/*------------*/


/* Random Styles */
.top-link {
    width: 100%;
    padding-right: 3.25em;
    padding-bottom: 1.25em;
    text-align: right;
}

.entry-previews {
    list-style: none;
}

.slide {
    display: none;
}

.demo {
    cursor: pointer
}

.yellow-highlight {
    background: #ffffe8;
    /* Default color, all browsers */
}

.yellow-highlight::selection {
    background: #FFFF66;
    /* Selection color, WebKit/Blink Browsers */
}

.yellow-highlight::-moz-selection {
    background: #FFFF66;
    /* Selection color, Gecko Browsers */
}

.archive-item {
    margin-left: .8em;
}
/*-------------*/


/* Footer Styling */
footer {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    flex-wrap: nowrap;
    padding-top: 1em;
    padding-left: .88em;
}

.footer-symbol {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: .2em;
    padding-top: .045em;
    padding-left: 1.35em;

    padding-bottom: .1em;
    font-weight: bold;
    font-size: 1.25em;
    color: var(--main-color);
}

.copyright {
    padding-top: .404em;
}

.svg-container {
    height: 50px;
    padding-top: 0;
}
/*------------*/


/* Links */
.post-content a {
    background-color: var(--blue-bg);
    color: var(--blue);
    padding: 0 .2em 0 .2em;
}

a {}

a:hover {
    color: var(--black);
    text-decoration: none;
}
/*------------*/


/* Device Specific Styling */
@media all {
    html {
        font-size: 1em;
    }
}

@media only screen and (min-width: 90em) {
    body {
        margin: 0 auto;
    }
}

@media screen and (max-width: 680px) {
    body {
        width: 100%;
    }
    main {
        width: 100%;
    }
    .MJXc-display {
        overflow-x: scroll;
    }
    aside {
        display: block;
        float: none;
        margin: 5% 10% 5% 10%;
        width: 80%;
    }
    .wrapper {
        margin: 0;
        border: none;
        border-radius: 0px;
    }

    .tab-info {
        grid-area: tab-info;
        padding-left: 2em;
    }
    .nav-item {
        padding-left: 0;
        padding-top: .6em;
    }
    .note-content {
        padding-left: 1em;
    }
    .post {
        width: 80%;
    }
}
/*------------*/

